--- a/13_mvc_mysql_release/package.json
+++ b/13_mvc_mysql_release/package.json
@@ -1,8 +1,7 @@
 {
-  "name": "13_mvc_mysql",
+  "name": "15_mvc_mysql_practice",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -12,9 +11,7 @@
   "dependencies": {
     "ejs": "^3.1.9",
     "express": "^4.18.2",
-    "mysql": "^2.18.1",
-    "mysql2": "^3.2.0",
-    "sequelize": "^6.30.0",
-    "sequelize-cli": "^6.6.0"
-  }
+    "mysql": "^2.18.1"
+  },
+  "description": ""
 }
