--- a/14_sequelize_practic2/package.json
+++ b/14_sequelize_practic2/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "13_mvc_mysql",
+  "name": "15_mvc_mysql2",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -10,11 +10,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "ejs": "^3.1.9",
+    "ejs": "^3.1.8",
     "express": "^4.18.2",
     "mysql": "^2.18.1",
-    "mysql2": "^3.2.0",
-    "sequelize": "^6.30.0",
-    "sequelize-cli": "^6.6.0"
+    "mysql2": "^2.3.3",
+    "sequelize": "^6.25.5",
+    "sequelize-cli": "^6.5.2"
   }
 }
