--- a/react0420/package.json
+++ b/react0420/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-basic",
+  "name": "react0420",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -17,7 +17,6 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
-  
   "eslintConfig": {
     "extends": [
       "react-app",
